--- a/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan.csproj
+++ b/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan.csproj
@@ -16,6 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="ConversationPage.xaml.cs">
+      <DependentUpon>ConversationPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="ChatPage.xaml.cs">
       <DependentUpon>ChatPage.xaml</DependentUpon>
     </Compile>
