--- a/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan.Android/ChatApp-PasanaSubaan.Android.csproj
+++ b/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan.Android/ChatApp-PasanaSubaan.Android.csproj
@@ -148,5 +148,8 @@
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\test.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
