--- a/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan.Android/ChatApp-PasanaSubaan.Android.csproj
+++ b/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan.Android/ChatApp-PasanaSubaan.Android.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AndroidPlainEntryEffect.cs" />
+    <Compile Include="CustomEntryRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
