--- a/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan.Android/ChatApp-PasanaSubaan.Android.csproj
+++ b/ChatApp-PasanaSubaan/ChatApp-PasanaSubaan.Android/ChatApp-PasanaSubaan.Android.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="AndroidPlainEntryEffect.cs" />
     <Compile Include="CustomEntryRenderer.cs" />
+    <Compile Include="DependencyServices\FirebaseAuthService.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
